# gate-contract-core

./: .gitignore  Cargo.toml  Commands.md  NOTICE  README.md  USAGE.md
.github/workflows/: main.yml  release-artifacts.yml
contracts/account-icg/: Cargo.toml
contracts/account-icg/src/: contract.rs  error.rs  function.rs  lib.rs  msgs.rs  state.rs
contracts/account-icg/src/tests/: mocks.rs  mod.rs  test.rs
contracts/cw20-icg/: Cargo.toml  README.md
contracts/cw20-icg/src/: contract.rs  state.rs
contracts/cw20-icg/src/tests/: test.rs
contracts/gate/: Cargo.toml  README.md
contracts/gate/src/: contract.rs  error.rs  functions.rs  ibc.rs  lib.rs  on_dest.rs  on_src.rs  queries.rs  state.rs
contracts/gate/src/extra/: mod.rs  msg_transfer.rs
contracts/gate/src/tests/: mock_querier.rs  mod.rs  test.rs  test_helper.rs
