[workspace]
members = ["contracts/*", "packages/*"]

[workspace.dependencies]
cosmwasm-schema  = { version = "1.2.0"  }
cosmwasm-std     = { version = "1.2.0", features = ["stargate", "ibc3", "cosmwasm_1_2"] }
rhaki-cw-plus    = { version = "0.3.0"  }
cw-storage-macro = { version = "1.0.1"  } 
cw-storage-plus  = { version = "1.0.1"  }
cw2              = { version = "1.0.1"  }
cw20             = { version = "1.0.1"  }
cw20-base        = { version = "1.0.1", features = ["library"] }
cw-utils         = { version = "1.0.1"  }
serde            = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror        = { version = "1.0.31" }
enum-repr        = { version = "0.2.6"  }
cw-multi-test    = { version = "0.16.5" }

