[package]
name = "cw20-icg"
version = "0.1.0"
authors = ["Rhaki"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.13
"""

[dependencies]
gate-pkg = { path = "../../packages/gate", version = "0.1.0", features = ["gate"] }
cw20-icg-pkg = { path = "../../packages/cw20-icg", version = "0.1.0" }
cosmwasm-schema = { version = "1.1.0" }
cosmwasm-std = { version = "1.1.0", features = ["stargate"] }
cw2 = "1.0.1"
cw20 = "1.0.1"
cw20-base = {version = "1.0.1", features = ["library"]}
cw-storage-plus = "1.0.1"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }