[package]
name    = "cw20-icg"
version = "0.1.0"
authors = ["Rhaki"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.13
"""

[dependencies]
gate-pkg        = { version = "0.1.0", path = "../../packages/gate",  features = ["gate"] }
cw20-icg-pkg    = { version = "0.1.0", path = "../../packages/cw20-icg" }
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw2             = { workspace = true }
cw20            = { workspace = true }
cw20-base       = { workspace = true }
cw-storage-plus = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }