[package]
name    = "gate"
version = "0.1.0"
authors = ["Rhaki"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.13
"""

[dependencies]
gate-pkg           = { path = "../../packages/gate", version = "0.1.0", features = ["gate"] }
cw20-icg-pkg       = { path = "../../packages/cw20-icg", version = "0.1.0" }
account-icg-pkg    = { path = "../../packages/account-icg", version = "0.1.0" }
rhaki-cw-plus      = { workspace = true }
cosmwasm-schema    = { workspace = true }
cosmwasm-std       = { workspace = true }
cw-storage-macro   = { workspace = true }
cw-storage-plus    = { workspace = true }
cw2                = { workspace = true }
cw20               = { workspace = true }
cw-utils           = { workspace = true }
serde              = { workspace = true }
thiserror          = { workspace = true }
enum-repr          = { workspace = true }
osmosis-std-derive = { version = "0.13.2" }
osmosis-std        = { version = "0.14.0" }
schemars           = { version = "0.8.10" }
prost              = { version = "0.11.2", default-features = false, features = ["prost-derive"]}
sha2               = { version = "0.10"   }

[dev-dependencies]
protobuf              = { version = "2", features = ["with-bytes"] }

